# Nintendo_Switch_Online_API_Bridge

./: .flake8  .gitignore  LICENSE  README.md  bridge_server.py  pyproject.toml  requirements.txt  setup.py  tests.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  python-lint.yml  python-publish.yml
app/: flapg.py  nsa.py  nso.py
nso_bridge/: __init__.py  flapg.py  metadata.py  nsa.py  nso.py  s2s.py  utils.py
nso_bridge/models/: __init__.py  accounts.py  friends.py  imink.py  response.py  user_info.py  users.py
scripts/: format.sh  lint.sh
tests/: test_main.py
