[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "nso_bridge"

[project]
name = "nso-bridge"
authors = [
    {name = "zeroday0619", email = "zeroday0619_dev@outlook.com"}
]
readme = "README.md"
description = "Nintendo Switch Online API bridge (for Nintendo Switch Online API wrapper)"
license = {file = "LICENSE"}
keywords = [
    "Nintendo", 
    "Nintendo Switch", 
    "Nintendo Switch Online",
    "Nintendo Switch Online API",
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dynamic = ["version"]
dependencies = [
    "requests >= 2.28.2",
    "keyring >= 23.13.1",
    "beautifulsoup4 >= 4.11.2",
    "pydantic>=1.10.4"
]

[project.optional-dependencies]
test = [
    "pytest >= 7.2.1",
    "pytest-cov >= 4.0.0"
]
lint = [
    "black>=23.1.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "autoflake>=2.0.1",
]

[project.urls]
Home = "https://github.com/zeroday0619/Nintendo_Switch_Online_API_Bridge"

